multipart/x-mixed-replace image crashes tab at PreloaderBase::NotifyStop
Categories
(Core :: Graphics: ImageLib, defect)
Tracking
()
People
(Reporter: nabijaczleweli, Assigned: tnikkel)
References
(Regression)
Details
(4 keywords)
Crash Data
Attachments
(1 file, 1 obsolete file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:128.0) Gecko/20100101 Firefox/128.0
Steps to reproduce:
Actual results:
Loads for a bit, then "Gah. Your tab just crashed.". Crash submitted @
https://crash-stats.mozilla.org/report/index/70a4543a-aaa5-4cc4-b450-584c70250127
https://crash-stats.mozilla.org/report/index/2649d211-a033-4a6e-a9cf-95e8d0250127
https://crash-stats.mozilla.org/report/index/47156629-e022-4a23-b50e-caa960250127
https://crash-stats.mozilla.org/report/index/a0f58c8f-1aed-4e40-afe5-cbd500250127
The context appears consistent between them all.
I repro this on 128.6.0esr (64-bit), 87.0b9 (64-bit), Android 129.0, and others.
On Android:
https://crash-stats.mozilla.org/report/index/bp-ff2e5bd9-dd5c-4bb5-9ae6-fdf920250127
https://crash-stats.mozilla.org/report/index/bp-24cbff45-23f3-408d-89a8-3e65e0250127
this is also the same.
Expected results:
Page loads, and animates. This is the case on Chromium (well, "Browser" on my phone).
![]() |
||
Updated•6 months ago
|
![]() |
||
Updated•6 months ago
|
![]() |
||
Comment 1•6 months ago
|
||
Crash on Windows11 : bp-74395af9-1391-4787-ba01-8c9ae0250127
![]() |
||
Comment 2•6 months ago
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=515f4054b1ccaa49b1f25f70f4e3a6f610184690&tochange=944ce5e286edeeedf0b54e0b50d4cc48ff63f12f
Tentatively, mark bug 1618295 as “Regressed by”.
Comment 3•6 months ago
|
||
:edgar, since you are the author of the regressor, bug 1618295, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Assignee | ||
Comment 4•6 months ago
|
||
Probably this is more of an imagelib problem and will fall in my court.
Assignee | ||
Updated•6 months ago
|
Updated•6 months ago
|
Updated•6 months ago
|
Comment 5•6 months ago
|
||
Set release status flags based on info from the regressing bug 1618295
Updated•6 months ago
|
Comment 6•6 months ago
|
||
RemoveObserver will usually fake the image has loaded. For a multipart
image it might trigger a last part notification incorrectly.
Not sure how to best construct a test-case for this, help there would be
appreciated.
Updated•6 months ago
|
Assignee | ||
Comment 7•5 months ago
|
||
In bug 1862059 we ensured that every (vector) part of a multipart image got load complete before it was made the current part. This missed the first part because it was never the next part, it just become the current part immediately. This was good enough to fix all cases except where the multipart image reached a finite end point (which would then send the final part load complete and hit the same duplicate final part load complete bug).
Updated•5 months ago
|
Updated•5 months ago
|
Comment 8•5 months ago
|
||
(Looks like Emilio's actively working on this, so I am clearing the pending needinfo which doesn't look needed, in order to remove this from the bugbot reminder email.)
Assignee | ||
Updated•5 months ago
|
Updated•5 months ago
|
Updated•5 months ago
|
Comment 10•4 months ago
|
||
bugherder |
Comment 11•4 months ago
|
||
The patch landed in nightly and beta is affected.
:tnikkel, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox138
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Updated•4 months ago
|
Comment 13•4 months ago
|
||
Copying crash signatures from duplicate bugs.
Updated•4 months ago
|
Assignee | ||
Updated•4 months ago
|
Updated•3 months ago
|
Description
•