Bug 1944122. Make sure the first (vector) part of a multipart images gets load complete. r=emilio

In bug 1862059 we ensured that every (vector) part of a multipart image got load complete before it was made the current part. This missed the first part because it was never the next part, it just become the current part immediately. This was good enough to fix all cases except where the multipart image reached a finite end point (which would then send the final part load complete and hit the same duplicate final part load complete bug).

Differential Revision: https://phabricator.services.mozilla.com/D241816